--- a/components/apps/pipelines-operator/base/subscription.yaml
+++ b/components/apps/pipelines-operator/base/subscription.yaml
@@ -6,7 +6,7 @@ metadata:
   name: openshift-pipelines-operator-rh
   namespace: openshift-operators
 spec:
-  channel: latest
+  channel: pipelines-1.10
   installPlanApproval: Automatic
   name: openshift-pipelines-operator-rh
   source: redhat-operators
