Change banner color

--- a/components/configs/banner/base/banner.yaml
+++ b/components/configs/banner/base/banner.yaml
@@ -6,7 +6,7 @@ spec:
   text: "Cluster: ${CLUSTER_NAME}"
   location: BannerTop
   color: '#fff'
-  backgroundColor: '#0088ce'
+  backgroundColor: '#0066CC'
   link:
     href: https://console.redhat.com/openshift/details/${CLUSTER_ID}
     text: "(${CLUSTER_ID})"
