--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -22,14 +22,14 @@ applications:
   #   source:
   #     path: components/configs/alertmanager/base
 
-  # acs:
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '21'
-  #   destination:
-  #     namespace: stackrox
-  #   source:
-  #     path: clusters/local.hub/apps/acs-operator/overlays/certificate
+  acs:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '21'
+    destination:
+      namespace: stackrox
+    source:
+      path: clusters/local.hub/apps/acs-operator/overlays/certificate
 
   # argo-rollouts:
   #   annotations:
@@ -56,15 +56,6 @@ applications:
       argocd.argoproj.io/sync-wave: '11'
     source:
       path: clusters/local.hub/apps/consolelinks/overlays/default
-
-  # acs-tokens:
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '61'
-  #   destination:
-  #     namespace: stackrox
-  #   source:
-  #     path: clusters/local.hub/apps/acs-tokens/overlays/endpoint
 
   authentication:
     annotations:
@@ -182,39 +173,3 @@ applications:
       argocd.argoproj.io/sync-wave: '99'
     source:
       path: clusters/local.hub/apps/node-config/base
-
-# Tenants
-  # gitops:
-  #   project: cluster-config
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '50'
-  #   source:
-  #     path: tenants/gitops/overlays/shared
-  #     extraSourceFields: |
-  #       plugin:
-  #         name: kustomize-envvar
-
-  # product-catalog-root:
-  #   project: cluster-config
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '51'
-  #   source:
-  #     path: tenants/product-catalog/argocd/root/base
-
-  # rollouts-demo-root:
-  #   project: cluster-config
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '51'
-  #   source:
-  #     path: tenants/rollouts-demo/argocd/root/base
-
-  # demo-root:
-  #   project: cluster-config
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '51'
-  #   source:
-  #     path: tenants/demo/argocd/root/base
