Add secured cluster

--- a/clusters/local.home/apps/acs/overlays/secured-cluster/kustomization.yaml
+++ b/clusters/local.home/apps/acs/overlays/secured-cluster/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
 - github.com/redhat-cop/gitops-catalog/advanced-cluster-security-operator/operator/overlays/latest
 - namespace.yaml
 - home-cluster-init-secrets.yaml
+- secured-cluster.yaml
