--- a/tenants/acs-tokens/base/postsync-roxsecret-namespaces.yaml
+++ b/tenants/acs-tokens/base/postsync-roxsecret-namespaces.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: stackrox
 data:
   NAMESPACES: product-catalog-cicd,demo-cicd
-  CENTRAL_URL: central.stackrox.svc
+  CENTRAL_URL: central-stackrox.apps.hub.ocplab.com
