--- a/tenants/rollouts-demo/argocd/root/base/values.yaml
+++ b/tenants/rollouts-demo/argocd/root/base/values.yaml
@@ -12,7 +12,6 @@ default:
       targetRevision: HEAD
 
 projects:
-
   tenants-rollouts-demo:
     description: Project for rollouts demo tenant
     namespace: openshift-gitops
@@ -32,14 +31,13 @@ projects:
       - group: '*'
         kind: '*'
     roles:
-      # Give tenant the ability to see applications and sync
       - description: Rollout Demo Admins
         name: user
         groups:
           - rollout-demo-admins
         policies:
-          - p, proj:tenants-rollouts-catalog:user, applications, get, tenants-rollouts-catalog/*, allow
-          - p, proj:tenants-rollouts-catalog:user, applications, sync, tenants-rollouts-catalog/*, allow
+          - p, proj:tenants-rollouts-demo:user, applications, get, tenants-rollouts-demo/*, allow
+          - p, proj:tenants-rollouts-demo:user, applications, sync, tenants-rollouts-demo/*, allow
 
 applications:
 
