--- a/clusters/aws.cluster/apps/banner/overlays/hub/kustomization.yaml
+++ b/clusters/aws.cluster/apps/banner/overlays/hub/kustomization.yaml
@@ -6,6 +6,9 @@ patches:
     - op: replace
       path: /spec/backgroundColor
       value: "#FF9900"
+    - op: replace
+      path: /spec/color
+      value: "#252F3E"
   target:
     kind: ConsoleNotification
     name: home-banner
