--- a/clusters/local.home/apps/consolelinks/overlays/default/acs-consolelink.yaml
+++ b/clusters/local.home/apps/consolelinks/overlays/default/acs-consolelink.yaml
@@ -3,9 +3,9 @@ kind: ConsoleLink
 metadata:
   name: acs
 spec:
-  href: 'https://central-stackrox.apps.home.ocplab.com'
+  href: 'https://central-stackrox.apps.hub.ocplab.com'
   location: ApplicationMenu
   text: Advanced Cluster Security
   applicationMenu:
     section: Red Hat applications
-    imageURL: https://central-stackrox.apps.home.ocplab.com/static/media/rh-favicon.0110fdfc.ico
+    imageURL: https://central-stackrox.apps.hub.ocplab.com/static/media/rh-favicon.0110fdfc.ico
