--- a/components/apps/dev-console-plugin/base/values.yaml
+++ b/components/apps/dev-console-plugin/base/values.yaml
@@ -1,4 +1,4 @@
 plugin:
   name: dev-console-plugin
   namespace: dev-console-plugin
-  image: quay.io/gnunn/dev-console-plugin.yaml
+  image: quay.io/gnunn/dev-console-plugin:latest
