Use token-exchange-1.8 which removes ugly hack

--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -11,6 +11,8 @@ spec:
         args: ["kustomize build --enable-helm . | perl -pe 's{\\$(\\{)?(\\w+)(?(1)\\})}{$ENV{$2} // $&}ge'"]
   sso:
     dex:
+      image: quay.io/gnunn/dex
+      version: token-exchange-1.8
       openShiftOAuth: true
     provider: dex
   resourceTrackingMethod: annotation
