Update google secret

--- a/components/configs/oauth/overlays/google-with-matrix/kustomization.yaml
+++ b/components/configs/oauth/overlays/google-with-matrix/kustomization.yaml
@@ -9,7 +9,7 @@ bases:
 - ../matrix-template
 
 resources:
-- google-secret-sealed-secret.yaml
+- google-client-secret.yaml
 
 patchesJson6902:
   - path: patch-google-idp.yaml
