Update references to clustersecretstore

--- a/components/configs/oauth/overlays/google-with-matrix/google-client-secret.yaml
+++ b/components/configs/oauth/overlays/google-with-matrix/google-client-secret.yaml
@@ -6,11 +6,9 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: doppler-common
-
+    name: doppler-cluster
   target:
     name: google-secret
-
   data:
     - secretKey: clientSecret
       remoteRef:
