--- a/components/apps/cert-manager-operator/issuers/letsencrypt-route53/base/letsencrypt-aws-external.yaml
+++ b/components/apps/cert-manager-operator/issuers/letsencrypt-route53/base/letsencrypt-aws-external.yaml
@@ -6,11 +6,9 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: doppler-common
-
+    name: doppler-cluster
   target:
     name: letsencrypt-aws
-
   data:
     - secretKey: secret-access-key
       remoteRef:
