--- a/components/configs/oauth/overlays/default/htpass-secret-external.yaml
+++ b/components/configs/oauth/overlays/default/htpass-secret-external.yaml
@@ -6,11 +6,9 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: doppler-common
-
+    name: doppler-cluster
   target:
     name: htpass-secret
-
   data:
     - secretKey: htpasswd
       remoteRef:
