--- a/components/apps/pipelines-operator/overlays/chains/kustomization.yaml
+++ b/components/apps/pipelines-operator/overlays/chains/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
 - ../../base
 - openshift-pipelines-namespace.yaml
-- signing-secrets.yaml
+- signing-cert-external.yaml
 - chains-config-cm.yaml
 - tekton-chain.yaml
