Switch dev-tools to hub and use external secret

--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -82,6 +82,15 @@ applications:
     source:
       path: clusters/local.hub/apps/certificates/overlays/hub
 
+  dev-tools:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '31'
+    destination:
+      namespace: dev-tools
+    source:
+      path: components/apps/dev-tools/overlays/default
+
   openshift-monitoring:
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
