--- a/components/apps/dev-tools/overlays/default/sonarqube-admin-secret.yaml
+++ b/components/apps/dev-tools/overlays/default/sonarqube-admin-secret.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: doppler-common
+    name: doppler-cluster
   target:
     name: sonarqube-admin
   data:
