Switch alertmanager to external secret

--- a/components/configs/alertmanager/base/alertmanager-main-secret.yaml
+++ b/components/configs/alertmanager/base/alertmanager-main-secret.yaml
@@ -1,10 +1,15 @@
-apiVersion: v1
-kind: Secret
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
 metadata:
-  annotations:
-    sealedsecrets.bitnami.com/managed: "true"
-    argocd.argoproj.io/sync-wave: "0"
-    argocd.argoproj.io/sync-options: Validate=false,ServerSideApply=true
   name: alertmanager-main
   namespace: openshift-monitoring
-type: Opaque
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: doppler-cluster
+  target:
+    name: alertmanager-main
+  data:
+    - secretKey: alertmanager.yaml
+      remoteRef:
+        key: ALERTMANAGER
