disable etcd encrypt compliance rule

--- a/components/apps/compliance-operator/overlays/cis-compliance/ocp-cis-tailored-profile.yaml
+++ b/components/apps/compliance-operator/overlays/cis-compliance/ocp-cis-tailored-profile.yaml
@@ -18,3 +18,5 @@ spec:
     rationale: Some containers require extra privileges
   - name: ocp4-configure-network-policies-namespaces
     rationale: Home lab supports ad-hoc demos
+  - name: ocp4-api-server-encryption-provider-config
+    rationale: Home lab, no need to encrypt etcd
