--- a/clusters/local.home/apps/acs/overlays/secured-cluster/kustomization.yaml
+++ b/clusters/local.home/apps/acs/overlays/secured-cluster/kustomization.yaml
@@ -2,7 +2,13 @@
 #   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 resources:
-- github.com/redhat-cop/gitops-catalog/advanced-cluster-security-operator/operator/overlays/latest
-- namespace.yaml
-- home-cluster-init-secrets.yaml
-- secured-cluster.yaml
+- ../../../../../../components/apps/acs-operator/overlays/secured-cluster
+
+patches:
+  - patch: |-
+      - op: replace
+        path: /spec/clusterName
+        value: home
+    target:
+      kind: SecuredCluster
+      name: stackrox-secured-cluster-services
