Replace cluster specific secured-cluster patch with env variable and plugin

--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -20,7 +20,7 @@ applications:
     destination:
       namespace: rhacs-operator
     source:
-      path: clusters/local.home/apps/acs/overlays/secured-cluster
+      path: components/apps/acs-operator/overlays/secured-cluster
 
   alertmanager:
     annotations:
