--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -21,6 +21,9 @@ applications:
       namespace: rhacs-operator
     source:
       path: components/apps/acs-operator/overlays/secured-cluster
+      extraSourceFields: |
+        plugin:
+          name: kustomize-envvar
 
   alertmanager:
     annotations:
