Use Cluster version of SecretStore

--- a/components/apps/acs-operator/overlays/secured-cluster/acs-collector-tls-secret.yaml
+++ b/components/apps/acs-operator/overlays/secured-cluster/acs-collector-tls-secret.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   refreshInterval: 1h
   secretStoreRef:
-    kind: SecretStore
+    kind: ClusterSecretStore
     name: doppler-cluster
   target:
     name: collector-tls
