Use sync wave to have externalsecrets go before securedcluster

--- a/components/apps/acs-operator/overlays/secured-cluster/acs-collector-tls-secret.yaml
+++ b/components/apps/acs-operator/overlays/secured-cluster/acs-collector-tls-secret.yaml
@@ -1,6 +1,8 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   name: collector-tls
   namespace: stackrox-secured-cluster-service
 spec:
