--- a/components/apps/acs-operator/overlays/secured-cluster/namespace.yaml
+++ b/components/apps/acs-operator/overlays/secured-cluster/namespace.yaml
@@ -1,4 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   name: stackrox-secured-cluster-service
