Fix stats for repo server

--- a/components/configs/gitops-dashboard/base/gitops-components-dashboard.yaml
+++ b/components/configs/gitops-dashboard/base/gitops-components-dashboard.yaml
@@ -947,7 +947,7 @@ data:
             "steppedLine": false,
             "targets": [
                 {
-                "expr": "go_memstats_heap_alloc_bytes{job=\"argocd-repo-server\",namespace=~\"$namespace\"}",
+                "expr": "go_memstats_heap_alloc_bytes{container=\"argocd-repo-server\",namespace=~\"$namespace\"}",
                 "format": "time_series",
                 "intervalFactor": 1,
                 "legendFormat": "{{pod}}",
@@ -1038,7 +1038,7 @@ data:
             "steppedLine": false,
             "targets": [
                 {
-                "expr": "go_goroutines{job=\"argocd-repo-server\",namespace=~\"$namespace\"}",
+                "expr": "go_goroutines{container=\"argocd-repo-server\",namespace=~\"$namespace\"}",
                 "format": "time_series",
                 "intervalFactor": 1,
                 "legendFormat": "{{pod}}",
