--- a/components/configs/gitops-dashboard/base/kustomization.yaml
+++ b/components/configs/gitops-dashboard/base/kustomization.yaml
@@ -1,4 +1,19 @@
-resources:
-- gitops-overview-dashboard.yaml
-- gitops-components-dashboard.yaml
-- gitops-grpc-dashboard.yaml
+namespace: openshift-config-managed
+
+commonLabels:
+  app.kubernetes.io/component: grafana
+  app.kubernetes.io/name: grafana
+  app.kubernetes.io/part-of: openshift-monitoring
+  app.kubernetes.io/version: 1.0.0
+  console.openshift.io/dashboard: 'true'
+
+configMapGenerator:
+- name: grafana-dashboard-gitops-overview
+  files:
+    - dashboards/gitops-overview.json
+- name: grafana-dashboard-gitops-components
+  files:
+    - dashboards/gitops-components.json
+- name: grafana-dashboard-gitops-grpc
+  files:
+    - dashboards/gitops-grpc.json
