--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -40,6 +40,10 @@ applications:
   #   source:
   #     path: components/apps/argo-rollouts/base
 
+  disable-nic:
+    source:
+      path: clusters/local.hub/apps/disable-motherboard-nic/base
+
   banner:
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
