Skip disabling nic for now

--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -40,9 +40,9 @@ applications:
   #   source:
   #     path: components/apps/argo-rollouts/base
 
-  disable-nic:
-    source:
-      path: clusters/local.hub/apps/disable-motherboard-nic/base
+  # disable-nic:
+  #   source:
+  #     path: clusters/local.hub/apps/disable-motherboard-nic/base
 
   banner:
     annotations:
