Specify creationPolicy to elimninate contention on ownerReference

--- a/components/apps/pipelines-operator/overlays/chains/signing-cert-external.yaml
+++ b/components/apps/pipelines-operator/overlays/chains/signing-cert-external.yaml
@@ -9,6 +9,8 @@ spec:
     name: doppler-cluster
   target:
     name: signing-secrets
+    # prevent fighting with tekton over ownership
+    creationPolicy: Orphan
   dataFrom:
   - extract:
       key: COSIGN
