Label openshift-compliance to use openshift-monitoring

--- a/components/apps/compliance-operator/overlays/cis-compliance/kustomization.yaml
+++ b/components/apps/compliance-operator/overlays/cis-compliance/kustomization.yaml
@@ -15,6 +15,6 @@ patches:
 - patch: |-
     - op: add
       path: /metadata/labels
-      value: {"openshift.io~1cluster-monitoring": "true"}
+      value: {"openshift.io/cluster-monitoring": "true"}
   target:
     kind: Namespace
