--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -13,6 +13,14 @@ default:
 
 applications:
 
+  # lvm-operator:
+  #   annotations:
+  #     argocd.argoproj.io/sync-wave: '0'
+  #   destination:
+  #     namespace: openshift-storage
+  #   source:
+  #     path: clusters/local.home/apps/lvm-operator/overlays/hub
+
   # alertmanager:
   #   annotations:
   #     argocd.argoproj.io/compare-options: IgnoreExtraneous
