--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -21,6 +21,14 @@ applications:
   #   source:
   #     path: clusters/local.home/apps/lvm-operator/overlays/hub
 
+  registry:
+  annotations:
+    argocd.argoproj.io/sync-wave: '5'
+  destination:
+    namespace: openshift-image-registry
+  source:
+    path: components/configs/registry-sno/base
+
   # alertmanager:
   #   annotations:
   #     argocd.argoproj.io/compare-options: IgnoreExtraneous
