--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -13,21 +13,21 @@ default:
 
 applications:
 
-  # lvm-operator:
-  #   annotations:
-  #     argocd.argoproj.io/sync-wave: '0'
-  #   destination:
-  #     namespace: openshift-storage
-  #   source:
-  #     path: clusters/local.home/apps/lvm-operator/overlays/hub
+  lvm-operator:
+    annotations:
+      argocd.argoproj.io/sync-wave: '0'
+    destination:
+      namespace: openshift-storage
+    source:
+      path: clusters/local.home/apps/lvm-operator/overlays/hub
 
   registry:
-  annotations:
-    argocd.argoproj.io/sync-wave: '5'
-  destination:
-    namespace: openshift-image-registry
-  source:
-    path: components/configs/registry-sno/base
+    annotations:
+      argocd.argoproj.io/sync-wave: '5'
+    destination:
+      namespace: openshift-image-registry
+    source:
+      path: components/configs/registry-sno/base
 
   # alertmanager:
   #   annotations:
