--- a/components/apps/acs-operator/overlays/secured-cluster/secured-cluster.yaml
+++ b/components/apps/acs-operator/overlays/secured-cluster/secured-cluster.yaml
@@ -3,6 +3,7 @@ apiVersion: platform.stackrox.io/v1alpha1
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "5"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   name: stackrox-secured-cluster-services
   namespace: stackrox-secured-cluster-service
 spec:
