--- a/clusters/local.home/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
+++ b/clusters/local.home/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
@@ -7,6 +7,8 @@ data:
   config.yaml: |
     enableUserWorkload: true
     prometheusK8s:
+      externalLabels:
+        cluster: local.home
       volumeClaimTemplate:
        spec:
          accessModes:
