--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -29,14 +29,14 @@ applications:
     source:
       path: components/configs/registry-sno/base
 
-  # alertmanager:
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '11'
-  #   destination:
-  #     namespace: openshift-monitoring
-  #   source:
-  #     path: components/configs/alertmanager/base
+  alertmanager:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '11'
+    destination:
+      namespace: openshift-monitoring
+    source:
+      path: components/configs/alertmanager/base
 
   acs:
     annotations:
@@ -46,15 +46,6 @@ applications:
       namespace: stackrox
     source:
       path: clusters/local.hub/apps/acs-operator/overlays/certificate
-
-  # argo-rollouts:
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '21'
-  #   destination:
-  #     namespace: argo-rollouts
-  #   source:
-  #     path: components/apps/argo-rollouts/base
 
   # disable-nic:
   #   source:
